templates/medcattrainer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    io.kompose.service: medcattrainer
  name: medcattrainer
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: medcattrainer
status:
  loadBalancer: {}
