templates/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    io.kompose.service: mtnginx
  name: mtnginx
spec:
  ports:
    - name: http
      port: 8001
      targetPort: 8000
  selector:
    io.kompose.service: mtnginx
status:
  loadBalancer: {}
